src/chat_preview/twitch_chat_preview.css
body,
html {
    background-color: #151518;
    margin: 0px;
    padding: 0px;
    height: 100%;
    box-sizing: border-box;
}

body {
    justify-content: center;
    align-items: center;
    text-align: center;
    display: flex;
    padding: 10px;
}

.chat-container {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    display: flex;
    flex-flow: column;
}



/* TTS (Text to speach) */

.tts {
    width: 100%;
    color: white;
    text-align: start;
    transition: "padding" 0.3 ease-in-out;
}

#tts-fieldset {
    border: 1px solid white;
    transition: border 0.3s ease-in-out,
        margin-bottom 0.3s ease-in-out,
        padding-bottom 0.3s ease-in-out,
        padding-top 0.3s ease-in-out;
    border-radius: 10px;
    margin-bottom: 10px;
    overflow-y: hidden;
}

#tts-fieldset[class*="tts-closed"] {
    border: 1px solid transparent;
    margin-bottom: 0px;
    padding-bottom: 0;
    padding-top: 0;
}

#tts-content {
    /* max-height is changed in code as well */
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease-in-out;
    text-align: center;
}


#tts-arrow {
    vertical-align: text-top;
}

#tts-content {
    display: grid;
    grid-template-columns: auto auto;
}

#tts-content label {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

#tts-content>div {
    display: grid;
    grid-template-columns: 1.3em auto;
    text-align: start;
}

@media (min-width: 450px) {

    .tts {
        width: 450px;
    }

    .chat-container {
        width: fit-content;
    }
}






/* CHAT */


.chat {
    display: block;
    border: 1px solid white;
    width: 100%;
    height: 100%;
    margin: 20px, auto, 10px, auto;
    padding: 6px;
    box-sizing: border-box;
    color: white;
    border-radius: 15px;
}

.title {
    border-bottom: 1px solid white;
    width: 100%;
    height: 30px;
    display: block;
    font-size: x-large;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;

    display: flex;
    flex-wrap: nowrap;
    flex-flow: row;
    justify-content: space-between;
}


.title-channel {
    color: white;
    text-decoration: none;

    width: auto;
    font-size: x-large;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    justify-self: center;
}

.title-channel:hover {
    text-decoration: underline;
}

.follow-link {
    color: blueviolet;
    text-decoration: none;

    overflow: visible;
    font-size: x-large;
    align-self: center;
    justify-self: center;
}

@media (min-width: 450px) {
    .chat {
        width: 450px;
    }
}





/* messages styles starts now */

.messages {
    padding: 3px;
    text-align: left;
    overflow-y: auto;
    height: calc(100% - 30px);
    overflow-wrap: break-word;
}

.message-line {
    padding-bottom: 6px;
}

.chatter {
    color: lightgreen;
    font-weight: 900;
}

.chatter::after {
    content: ":\00a0";
    color: white
}

.chatter-message {}





/* SCROLL BAR */


/* Firefox */
.messages {
    scrollbar-width: thin;
    scrollbar-color: #3a3f42 #0C0C0C;
}

/* Chrome, Edge and Safari */
.messages::-webkit-scrollbar {
    width: 10px;
    width: 10px;
}

.messages::-webkit-scrollbar-track {
    border-radius: 5px;
    background-color: #0C0C0C;
}

.messages::-webkit-scrollbar-track:hover {
    background-color: #0C0C0C;
}

.messages::-webkit-scrollbar-track:active {
    background-color: #0C0C0C;
}

.messages::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: #3a3f42;
}

.messages::-webkit-scrollbar-thumb:hover {
    background-color: #3a3f42;
}

.messages::-webkit-scrollbar-thumb:active {
    background-color: #3a3f42;
}

